--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,5 +3,5 @@ label.password=Password
 label.login=Login
 label.submit=Submit
 
-info.logout_success=You have been logged out
-error.login_failed=Invalid Email and Password
+info.logout_success=Logged out successfully.
+error.login_failed=Invalid Email or Password.
