Login Sign up improvments

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,4 +4,4 @@ label.login=Login
 label.submit=Submit
 
 info.logout_success=You have been logged out
-error.login_failed=Invalid Email and Password
+error.login_failed=Invalid Email or Password
